--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Slides</title>
 		<link rel="stylesheet" href="./multiCol.css">
 		<link rel="stylesheet" href="./Reveal/reveal.css">
-		<link rel="stylesheet" href="./Reveal/theme/black.css">
-		<!-- <link rel="stylesheet" href="./Reveal/theme/solarized.css"> -->
+		<!-- <link rel="stylesheet" href="./Reveal/theme/black.css"> -->
+		<link rel="stylesheet" href="./Reveal/theme/solarized.css">
 	</head>
 
 	<body>
